plugins {
    id 'com.gradleup.shadow' version '9.0.0-beta4'
    id 'java'
}

group = 'com.lx862'
version = '1.1.0'

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io/' }
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    implementation 'commons-cli:commons-cli:1.9.0'
    implementation 'commons-io:commons-io:2.18.0'
    implementation 'com.formdev:flatlaf:3.5.4'
    implementation 'com.formdev:flatlaf-intellij-themes:3.5.4'
    implementation 'com.github.rjeschke:txtmark:0.13'
    implementation 'com.google.code.gson:gson:2.11.0'
    implementation 'com.moandjiezana.toml:toml4j:0.7.2'
}

tasks.withType(JavaCompile).configureEach {
    options.release = 17
}

jar {
    manifest {
        attributes(
            'Main-Class': 'com.lx862.pwgui.Main'
        )
    }
}

build {
    dependsOn(shadowJar)
}

test {
    useJUnitPlatform()
}